--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <style>
     #div{
         text-align: center;
-        float: left;
+        float: right;
     }
     canvas {
         float: left;
@@ -32,10 +32,13 @@
     <h1>game khủng long ăn thịt</h1>
     <button onclick="star()">star</button>
     <button onclick="End()">end</button>
+
 </div>
 <audio src="Tieng-khung-long-gam-www_tiengdong_com.mp3" loop autoplay class="audio"></audio>
 <audio src="Am-thanh-that-vong-www_tiengdong_com.mp3"  autoplay class="audio1"></audio>
-
+<audio src="Am-thanh-chien-thang-www_tiengdong_com.mp3"  autoplay class="audio2"></audio>
+<script src="dino.js"></script>
+<script src="Food.js"></script>
 <script src="game.js"></script>
 </body>
 </html>
