--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 <audio src="Am-thanh-chien-thang-www_tiengdong_com.mp3"  autoplay class="audio2"></audio>
 <script src="dino.js"></script>
 <script src="Food.js"></script>
+<script src="obstacle.js"></script>
 <script src="game.js"></script>
 </body>
 </html>
