--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <style>
 
-    body{
+    body {
         color: firebrick;
         text-align: center;
         font-weight: bold;
@@ -17,21 +17,26 @@
         font-family: "MingLiU-ExtB";
         background-image: url("backgroudWin1.jpg");
     }
-    button{
+
+    button {
         color: firebrick;
         background-color: silver;
         text-align: center;
         font-weight: bold;
+        border-radius: 20px;
     }
+
     canvas {
         /*float: left;*/
         border: 5px solid black;
         text-align: center;
-        margin-top:0px ;
+        margin-top: 0px;
         margin-left: 0px;
-        background-image:url("backgroud.jpg") ;
+        background-image: url("backgroud.jpg");
+        border-radius: 50px;
     }
-    button:hover{
+
+    button:hover {
         background-color: red;
         text-decoration: underline;
     }
@@ -48,8 +53,8 @@
     <h2>di chuyển khủng long của bạn để ăn thịt và đừng để bị quả bom đuổi</h2>
 </div>
 <audio src="Tieng-khung-long-gam-www_tiengdong_com.mp3" loop autoplay class="audio"></audio>
-<audio src="Am-thanh-that-vong-www_tiengdong_com.mp3"  autoplay class="audio1"></audio>
-<audio src="Am-thanh-chien-thang-www_tiengdong_com.mp3"  autoplay class="audio2"></audio>
+<audio src="Am-thanh-that-vong-www_tiengdong_com.mp3" autoplay class="audio1"></audio>
+<audio src="Am-thanh-chien-thang-www_tiengdong_com.mp3" autoplay class="audio2"></audio>
 <script src="dino.js"></script>
 <script src="Food.js"></script>
 <script src="obstacle.js"></script>
